commissioning rm-plots

--- a/cut-object.html
+++ b/cut-object.html
@@ -206,17 +206,24 @@ doesn't have a worker, but it uses a similar system.
 
                 // Theses properties are visualized by the tile element
                 n_spikes: inds.length,
-                spa_max: -1,
-                dir_rm: "",
-                spa_rm: "",
-                speed_rm: "",
+                rm_spa_max: -1,
+                rm_dir: "",
+                rm_spa: "",
+                rm_speed: "",
                 tac: "",
                 waves: "",
 
-                // private properties for use by tac module, never notified
+                // private properties for use by tac-plots module, never notified
                 _tac_other: null,
                 _tac_other_options: null,
                 _tac_is_on_worker: false,
+
+                // private properties for use by rm-plots module, never notified
+                _rm_spa_other: null,
+                _rm_dir_other: null,
+                _rm_speed_other: null,
+                _rm_other_options: null,
+                _rm_is_on_worker: false,
 
                 // property set by Polymer.Collection
                 _pkey: null 
